# dizimo

./: .dockerignore  .gitignore  .gitlab-ci.yml  Dockerfile  Procfile  dizimista.json  docker-compose.yaml  entrypoint.sh  install_wkhtml2pdf.sh  manage.py  populate.py  populate.sh  pyproject.toml  requirements.txt
.semaphore/: semaphore.yml
core/: admin.py  models.py
core/migrations/: 0001_initial.py  0002_auto_20200913_1022.py  0003_perfil_dizimista.py  0004_auto_20200913_1625.py  0005_auto_20200913_1704.py  0006_remove_perfil_dizimista.py
dizimo/: asgi.py  settings.py  urls.py  wsgi.py
gestao/: admin.py  apps.py  models.py  tests.py
gestao/migrations/: 0001_initial.py  0002_auto_20200902_1812.py  0002_auto_20200903_1511.py  0003_auto_20200904_1810.py  0003_dizimista_telefone.py  0004_auto_20200905_1654.py  0004_dizimista_genero.py  0005_auto_20200902_1818.py  0005_auto_20200906_1725.py  0006_auto_20200902_1905.py  0006_auto_20200906_2323.py  0007_auto_20200902_2039.py  0007_auto_20200907_2009.py  0008_auto_20200902_2044.py  0008_auto_20200908_0005.py  0009_auto_20200902_2055.py  0009_auto_20200908_0101.py  0010_auto_20200902_2055.py  0010_auto_20200908_0103.py  0011_auto_20200902_2058.py  0011_auto_20200908_0104.py  0012_auto_20200902_2100.py  0012_auto_20200908_0118.py  0013_auto_20200902_2107.py  0013_auto_20200910_1305.py  0014_auto_20200902_2112.py  0014_auto_20200913_1608.py  0015_auto_20200902_2114.py  0015_auto_20200913_1615.py  0016_auto_20200902_2116.py  0016_remove_dizimista_perfil.py  0017_auto_20200902_2130.py  0017_remove_pagamento_igreja.py  0018_auto_20200902_2137.py  0018_dizimista_dizimo.py  0019_auto_20200902_2139.py  0019_dizimista_perfil.py  0020_auto_20200902_2256.py  0020_auto_20200914_1052.py  0021_auto_20200903_0124.py  (+7 more)
gestao/templates/: base.html  home.html  index.html  pagamento.html  plot.html
gestao/templates/admin/: export_as_pdf.html  index.html  plot.html  resumo_pagamentos_change_list.html  table.html
gestao/templates/admin/resumopagamentos/: change_list.html
gestao/templatetags/: gestao_extras.py
