[tool.poetry]
name = "dizimo"
version = "0.1.0"
description = "Sistema de gestão de dizimo"
authors = ["Weverton Marques <wevertonms@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.1.1"
django-jazzmin = "^2.2.7"
gunicorn = "^20.0.4"
dj-database-url = "^0.5.0"
whitenoise = "^5.2.0"
psycopg2-binary = "^2.8.6"
dj-static = "^0.0.6"
static3 = "^0.7.0"
django-environ = "^0.4.5"
pdfkit = "^0.6.1"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
prospector = "^1.3.0"
rope = "^0.17.0"
faker = "^4.1.2"
ipython = "^7.18.1"
isort = "4.2.5"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
