[project]
authors = [{ name = "Weverton Marques", email = "wevertonms@gmail.com" }]
requires-python = "<4.0,>=3.8"
dependencies = [
    "django<4.0.0,>=3.1.1",
    "django-jazzmin<3.0.0,>=2.2.7",
    "gunicorn<21.0.0,>=20.0.4",
    "dj-database-url<1.0.0,>=0.5.0",
    "whitenoise<6.0.0,>=5.2.0",
    "psycopg2-binary<3.0.0,>=2.8.6",
    "dj-static<1.0.0,>=0.0.6",
    "static3<1.0.0,>=0.7.0",
    "django-environ<1.0.0,>=0.4.5",
    "pdfkit<1.0.0,>=0.6.1",
]
name = "dizimo"
version = "0.1.0"
description = "Sistema de gestão de dizimo"

[dependency-groups]
dev = ["faker<5.0.0,>=4.1.2", "ipython<8.0.0,>=7.18.1"]
typing = [
    "django-types>=0.20.0",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.poe]
envfile = ".env"

[tool.poe.tasks]
mm = { cmd = "python manage.py makemigrations", help = "python manage.py makemigrations" }
mi = { cmd = "python manage.py migrate", help = "python manage.py migrate" }
cs = { cmd = "python manage.py collectstatic --noinput", help = "python manage.py collectstatic --noinput" }
run = { cmd = "./entrypoint.sh python manage.py runserver", help = "python manage.py collectstatic --noinput" }
